RESOLVED FIXED250002
Painting an in-process VideoFrame in a remotely-backed canvas does not work
https://bugs.webkit.org/show_bug.cgi?id=250002
Summary Painting an in-process VideoFrame in a remotely-backed canvas does not work
youenn fablet
Reported 2023-01-02 06:24:03 PST
Painting an in-process VideoFrame in a remotely-backed canvas does not work
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-02 06:24:17 PST
youenn fablet
Comment 2 2023-01-03 06:45:06 PST
EWS
Comment 3 2023-01-05 01:37:11 PST
Committed 258479@main (2818008f7934): <https://commits.webkit.org/258479@main> Reviewed commits have been landed. Closing PR #8145 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.