Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.cpp
@@ -582,16 +582,10 @@ void Recorder::paintFrameForMedia(MediaPlayer& player, const FloatRect& destinat
     ASSERT(player.identifier());
     recordPaintFrameForMedia(player, destination);
 }
-#endif
 
-#if ENABLE(WEB_CODECS)
 void Recorder::paintVideoFrame(VideoFrame& frame, const FloatRect& destination, bool shouldDiscardAlpha)
 {
-    if (!frame.isRemoteProxy()) {
-        GraphicsContext::paintVideoFrame(frame, destination, shouldDiscardAlpha);
-        return;
-    }
-    // FIXME: Implement recording.
+    recordPaintVideoFrame(frame, destination, shouldDiscardAlpha);
 }
 #endif
 
